--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 .icon-container {
   height: 40px;
   width: 40px;
@@ -8,4 +9,16 @@
 
 .icon-container:hover {
   background-color: gray;
+}
+
+.BsThreeDots{
+  height: 40px;
+  width: 40px;
+  padding: 8px;
+  border-radius: 50%;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.BsThreeDots:hover{
+background-color: gray;
 }
